working on homepage styling

--- a/src/assets/scss/layouts/_global.scss
+++ b/src/assets/scss/layouts/_global.scss
@@ -2,3 +2,15 @@
 // Global Partial
 // Styles for global layout.
 //==================================================================
+
+body {
+  background: #f2f2f2;
+}
+
+.site-logo {
+  margin: 0;
+}
+
+.container {
+  @include outer-container;
+}
