--- a/src/assets/scss/layouts/_header.scss
+++ b/src/assets/scss/layouts/_header.scss
@@ -2,3 +2,9 @@
 // Header Partial
 // Styles for header layout.
 //==================================================================
+
+.primary-header {
+  background: #333;
+  color: white;
+  padding: 15px 0;
+}
