--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -3,25 +3,21 @@
 // Configured component imports for the site/application
 //==================================================================
 
-  // Bourbon & Neat & Bitters
-  @import 'bourbon/bourbon';
-  @import 'base/base';
-  @import 'neat/neat';
+  // Google Fonts
+  @import url(https://fonts.googleapis.com/css?family=Roboto:400,700,700italic,400italic);
 
   // Reset
   @import 'bower/normalize.css/normalize';
+
+  // Icon Fonts
+  @import 'base/icons';
 
   // Utilities
   @import 'utilities/variables';
   @import 'utilities/mixins';
 
-  // Generated Styles
-  @import 'generated/icon-font';
-
   // Components
   @import 'components/buttons';
-  @import 'components/navigations';
-  @import 'components/alerts';
   @import 'components/forms';
 
   // Layouts
@@ -32,5 +28,3 @@
 
   // Pages
   @import 'pages/home';
-
-  // Plugins
