--- a/src/assets/scss/layouts/_global.scss
+++ b/src/assets/scss/layouts/_global.scss
@@ -3,14 +3,18 @@
 // Styles for global layout.
 //==================================================================
 
-body {
-  background: #f2f2f2;
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
 }
 
-.site-logo {
-  margin: 0;
+body {
+  background: #f2f2f2;
+  font-family: 'Roboto', sans-serif;
 }
 
 .container {
-  @include outer-container;
+  max-width: 1200px;
+  margin: auto;
 }
