--- a/src/assets/scss/layouts/_header.scss
+++ b/src/assets/scss/layouts/_header.scss
@@ -3,8 +3,93 @@
 // Styles for header layout.
 //==================================================================
 
+$header-height: 50px;
+$header-bg: #333333;
+
 .primary-header {
-  background: #333;
+  background: $header-bg;
   color: white;
-  padding: 15px 0;
+  height: $header-height;
+
+  .container {
+    display: flex;
+    align-items: center;
+  }
+
+  .site-logo {
+    margin: 0;
+    line-height: 1;
+    flex: 20%;
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    &--alt {
+      color: #c0425b;
+    }
+  }
+}
+
+.primary-nav {
+  flex: 80%;
+
+  ul {
+    height: $header-height;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    overflow: hidden;
+    float: right;
+  }
+
+  li {
+    position: relative;
+    float: left;
+    border-right: 1px solid darken($header-bg, 10%);
+    border-left: 1px solid lighten($header-bg, 10%);
+    height: 100%;
+
+    &:first-child {
+      &:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: '';
+        height: 100%;
+        border-left: 1px solid darken($header-bg, 10%);
+      }
+    }
+
+    &:last-child {
+      &:before {
+        position: absolute;
+        top: 0;
+        right: 0;
+        content: '';
+        height: 100%;
+        border-left: 1px solid lighten($header-bg, 10%);
+      }
+    }
+
+    a {
+      color: white;
+      text-decoration: none;
+      height: 100%;
+      padding: 0 15px;
+      display: flex;
+      align-items: center;
+      transition: background 0.3s ease;
+
+      &:hover {
+        background: #000;
+      }
+    }
+
+    span {
+      font-size: 80%;
+      padding-left: 5px;
+    }
+  }
 }
