--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -13,6 +13,17 @@
     width: 50%;
     margin: auto;
 
+    // if there are errors
+    &.form-error {
+      i {
+        color: rgb(196, 17, 52);
+      }
+
+      input[type=text] {
+        border-color: rgb(196, 17, 52);
+      }
+    }
+
     i {
       position: absolute;
       top: 8px;
@@ -27,10 +38,7 @@
     border: 1px solid #e5e5e5;
     border-radius: 50px;
     padding: 10px 20px;
-
-    &:hover {
-      border-color: darken(#e5e5e5, 10%);
-    }
+    outline: 0;
   }
 }
 
