--- a/src/assets/scss/utilities/_variables.scss
+++ b/src/assets/scss/utilities/_variables.scss
@@ -2,3 +2,5 @@
 // Global Settings
 // Central location for project-level variables.
 //=========================================================
+
+$primary-color: #c0425b;
